[package]
name = "octopussy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
csv = "1.3.1"
rust_decimal = { version = "1.37.1", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
clippy = "0.0.302"
